--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Git!</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
-  rocky balboa
+    <h1>I am gonna crush git and github</h1>
 </body>
 </html>
