index.html has been updated with a new line

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>I am gonna crush git and github</h1>
+    <p>Life is not fair for everyone. You gotta make it right.</p>
 </body>
 </html>
