--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>I am gonna crush git and github</h1>
     <p>Life is not fair for everyone. You gotta make it right.</p>
+    <div><img src="4 Modes in Git.png"></div>
 </body>
 </html>
