--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>I am gonna crush git and github</h1>
     <p>Life is not fair for everyone. You gotta make it right.</p>
     <div><img src="4 Modes in Git.png"></div>
+    <p>And that's how shit works, mate!</p>
 </body>
 </html>
