--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>I am gonna crush git and github</h1>
     <div><img src="4 Modes in Git.png"></div>
-    <p>And that's how shit works, mate!</p>
+    <p>And that's how stuff works, mate!</p>
     <div><img src="Smiling Squirrel.jpg"></div>
+    <p>I am the upcoming LEGEND</p>
+    <P>Pushing this to github</P>
 </body>
 </html>
