--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <div><img src="Smiling Squirrel.jpg"></div>
     <p>I am the upcoming LEGEND</p>
     <P>Pushing this to github</P>
+    <span>I realized that code editing is possible from Github also.</span>
 </body>
 </html>
